# tech-support-classifier-otus

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-file.yaml
k8s/: deployment.yaml  grafana-ingress-values.yaml  hpa.yaml  ingress.yaml  ip_service.yaml  k8s-kind-config.yaml  predtopic-service-monitor.yaml  prometheus-config-map-append.yaml
notebooks/: eda.ipynb
scripts/: test_service.py
scripts/airflow_dags/: dag.py
scripts/py_pipeline/: inference.py  label.py  preprocess.py  relabel.py  s3client.py  train.py
scripts/spark_pipeline/: config.py  label.py  preprocess.py  relabel.py  s3client.py  train.py  train_ab_mlflow.py
src/: app.py  config.py  inference.py  models.py  utils.py
