[tool.poetry]
name = "otus final project"
version = "0.1.0"
description = "Tech support tickets classifier app"
authors = ["Aleksei Pekhterev <lexpekhterev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
spacy = "^3.7.5"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
boto3 = "1.34.34"
findspark = "2.0.1"
pandas = "^2.2.3"
numpy = "1.26.4"
s3fs = "2024.3.1"
fsspec = "2024.3.1"
kafka-python = "^2.0.2"
lz4 = "^4.3.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
prometheus-client = "^0.21.0"
pyarrow = "^17.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pyspark = "3.4.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
spacy = "^3.7.5"
nltk = "^3.9.1"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
